# kotlin-native

./: CPLUSPLUS.md  CPlusPlus.md  gradle.properties
Interop/Indexer/: build.gradle  clang.def
Interop/Indexer/prebuilt/nativeInteropStubs/c/: clangstubs.c
Interop/Indexer/prebuilt/nativeInteropStubs/kotlin/clang/: clang.kt
Interop/Indexer/src/nativeInteropStubs/cpp/: signalChaining.cpp
Interop/Runtime/src/main/kotlin/kotlinx/cinterop/: Types.kt
Interop/Runtime/src/native/kotlin/kotlinx/cinterop/: NativeTypes.kt
backend.native/cli.bc/src/org/jetbrains/kotlin/cli/bc/: K2Native.kt
backend.native/tests/: build.gradle
backend.native/tests/interop/cpp/: namespace.def
libclangext/src/main/cpp/: ClangExt.cpp  ExtVector.cpp
libclangext/src/main/include/clang-c/: ExtVector.h  ext.h
runtime/src/launcher/cpp/: launcher.cpp
runtime/src/main/cpp/: KUtils.h  Runtime.cpp  TypeInfo.cpp  Types.cpp
runtime/src/main/kotlin/kotlin/: Primitives.kt
runtime/src/main/kotlin/kotlin/native/internal/: IntrinsicType.kt
samples/cpptest/: NOTES-ru.md  TODO.md  features.def
samples/cpptest/src/kotlin/FeatureTest/: main.kt
samples/cpptest/src/native/: features.cpp  features.h
samples/eh/: AppDelegate.m  CMakeLists.txt  KotlinNativeFramework.kt  eh.cpp  eh.def  eh.h  eh.kt
samples/enum/: enum.def
samples/simd/: CMakeLists.txt  simd.def  simd3.kt  simd_lib.c  simd_lib.cpp  simd_lib.h  simd_test.kt  simd_wrapper.def
samples/skia/: Canvas.def  README.md  SkTime.def
samples/skia/src/skiaMain/kotlin/: Picture.kt  sktimeSample.kt
samples/union/: union.def  union.kt
(+29 files in other folders)
